fix on safari

--- a/scss/300x600-exite/style.scss
+++ b/scss/300x600-exite/style.scss
@@ -391,7 +391,7 @@ body a {
     width: 1551px;
     transform: translate(-775px, -1129px);
     img {
-      height: 2248px;
+      //height: 2248px;
       width: 1551px;
       animation-name: img-warehouse;
       transform: scale(0.1939) translateY(505px) translateX(0px);
@@ -526,7 +526,7 @@ body a {
     width: 1551px;
     transform: translate(-775px, -1124px);
     img {
-      height: 2248px;
+      //height: 2248px;
       width: 1551px;
       animation-name: img-retargeting;
       transform: scale(0.1939) translateY(507px) translateX(0px);
